--- a/code/API_definitions/consent.yaml
+++ b/code/API_definitions/consent.yaml
@@ -13,9 +13,7 @@ externalDocs:
   description: Product documentation at Camara
   url: https://github.com/camaraproject/
 security:
-  - openId:
-      - consent_write
-      - consent_read
+  - oAuth2ClientCredentials: []
 servers:
   - url: '{apiRoot}/{basePath}'
     variables:
@@ -63,17 +61,13 @@ paths:
         '503':
           $ref: '#/components/responses/Generic503'
 
-      security:
-       - openId:
-          - consent_write
-
   /consents/{consent-id}:
-    get:
+    patch:
       tags:
         - Consent management
-      summary: Retrieves a consent record
-      description: Retrieves a consent record
-      operationId: getConsent
+      summary: Updates a consent record
+      description: Updates a consent record
+      operationId: updateConsent
       parameters:
         - name: consent-id
           in: path
@@ -88,44 +82,6 @@ paths:
             schema:
               $ref: "#/components/schemas/UpdateConsentRecord"
       #            examples:
-      responses:
-        '200':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ConsentRecord'
-        '400':
-          $ref: '#/components/responses/Generic400'
-        '401':
-          $ref: '#/components/responses/Generic401'
-        '403':
-          $ref: '#/components/responses/Generic403'
-        '404':
-          $ref: '#/components/responses/Generic404'
-        '500':
-          $ref: '#/components/responses/Generic500'
-        '501':
-          $ref: "#/components/responses/Generic501"
-        '503':
-          $ref: '#/components/responses/Generic503'
-
-      security:
-        - openId:
-            - consent_read
-
-    patch:
-      tags:
-        - Consent management
-      summary: Updates a consent record
-      description: Updates a consent record
-      operationId: updateConsent
-      parameters:
-        - name: consent-id
-          in: path
-          required: true
-          schema:
-            $ref: "#/components/schemas/ConsentId"
       responses:
         '200':
           description: Updated
@@ -147,14 +103,50 @@ paths:
           $ref: "#/components/responses/Generic501"
         '503':
           $ref: '#/components/responses/Generic503'
-      security:
-        - openId:
-            - consent_write
+
+    get:
+      tags:
+        - Consent management      
+      summary: Retrieves a consent record
+      description: Retrieves a consent record
+      operationId: getConsent
+      parameters:
+        - name: consent-id
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/ConsentId"
+      responses:
+        '200':
+          description: Consent record found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ConsentRecord'
+        '400':
+          $ref: '#/components/responses/Generic400'
+        '401':
+          $ref: '#/components/responses/Generic401'
+        '403':
+          $ref: '#/components/responses/Generic403'
+        '404':
+          $ref: '#/components/responses/Generic404'
+        '500':
+          $ref: '#/components/responses/Generic500'
+        '501':
+          $ref: "#/components/responses/Generic501"
+        '503':
+          $ref: '#/components/responses/Generic503'
+     
 components:
   securitySchemes:
-    openId:
-      type: openIdConnect
-      openIdConnectUrl: https://example.com/.well-known/openid-configuration
+    oAuth2ClientCredentials:
+      description: OAuth2 client credentials flow         
+      type: oauth2
+      flows:
+        clientCredentials:
+          tokenUrl: "{tokenUrl}"
+          scopes: {}  
           
   schemas:
     CreateConsentRecord:
@@ -163,18 +155,15 @@ components:
       required:
         - appId
         - policyId
-        - targetDeviceId
-        - subscriberId
+        - dataSubject
         - consentStatus
       properties:
         appId:
           $ref: '#/components/schemas/AppId'
         policyId:
           $ref: '#/components/schemas/PolicyId'
-        targetDeviceId:
-          $ref: '#/components/schemas/TargetDeviceId'
-        subscriberId:
-          $ref: '#/components/schemas/SubscriberId'
+        dataSubject:
+          $ref: '#/components/schemas/DataSubject'    
         consentStatus:
           $ref: '#/components/schemas/ConsentStatus'
         consentDateTime:
@@ -220,6 +209,18 @@ components:
       description: Identifier of the policy this consent is based on
       type: string
 
+    DataSubject:
+      description: Data subject
+      type: object
+      required:
+        - targetDeviceId
+        - subscriberId
+      properties:
+        targetDeviceId:
+          $ref: '#/components/schemas/TargetDeviceId'
+        subscriberId:
+          $ref: '#/components/schemas/SubscriberId'  
+          
     TargetDeviceId:
       description: Device identifier
       type: object
@@ -227,15 +228,15 @@ components:
         phoneNumber:
           $ref: "#/components/schemas/PhoneNumber"
 
+    SubscriberId:
+      description: Subscriber identifier
+      type: string
+
     PhoneNumber:
       description: A public identifier addressing a telephone subscription. In mobile networks it corresponds to the MSISDN (Mobile Station International Subscriber Directory Number). In order to be globally unique it has to be formatted in international format, according to E.164 standard, optionally prefixed with '+'.
       type: string
       pattern: '^\+?[0-9]{5,15}$'
       example: "123456789"
-
-    SubscriberId:
-      description: Subscriber identifier
-      type: string
 
     ConsentStatus:
       description: Consent granted or denied
